tests/paczka1/fuzzy1/68279857.err
Error in line 7: VIs1 A827 69,2
Error in line 6: S237 A149 52,8
Error in line 22: VIs1 S388 -3,3
